authenticated-icecast/rootoverlay/etc/iptables/ip6tables.rules
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
#VPN Tunnel
#-A INPUT -i eth0 -m state --state NEW -p udp --dport 1194 -j ACCEPT
#-A INPUT -i tun+ -j ACCEPT

# always allow the loopback
-A OUTPUT -o lo -j ACCEPT
-A INPUT -i lo -j ACCEPT

#This allows connections that match other rules to automaticly allow two way communications
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT

# SSH
-A INPUT -m tcp -p tcp --dport 22 -j ACCEPT

# Icecast
-A INPUT -m multiport -p tcp -s 0.0.0.0/0 --dports %PORT%,%TLS_PORT% -j ACCEPT

#Outgoing DNS:
-A OUTPUT -p udp -m multiport --dports 53,853 -j ACCEPT
-A OUTPUT -p tcp -m multiport --dports 53 -j ACCEPT


COMMIT
